--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ highlighter:      rouge
 
 # Setup
 title:            Wei Guo
-tagline:          "What creates motion?"
+tagline:          "What creates perception?"
 description:      "I'm exploring generative multimedia computing."
 url:              https://wei-parker-guo.github.io
 baseurl:          ''
